--- a/style.css
+++ b/style.css
@@ -138,6 +138,16 @@
     background-color:  rgb(51, 49, 49);
 }
 
+.nota{
+
+    background-image: linear-gradient(45deg, greenyellow, rgb(146, 201, 63) , rgb(161, 201, 102), rgb(136, 197, 45) );
+}
+
+.nota:hover{
+
+    background-image: linear-gradient(-45deg, blue, rgb(143, 143, 243), rgb(71, 71, 243), blue);
+}
+
 
 h1{
 
@@ -148,7 +158,7 @@ h1{
     transition: all 2s;
     text-shadow: black 1px 1px;
     color: orangered;
-    filter: blur(1px);
+    
     
 }
 
