--- a/style.css
+++ b/style.css
@@ -18,6 +18,18 @@
 
 }
 
+
+
+#h1::first-letter{
+
+    font-size: 40px;
+    
+
+
+}
+
+
+
 .linha{
 
     width: 20px;
@@ -155,7 +167,7 @@ h1{
     text-align: center;
     font-size: 30px;
     margin-top: 10px;
-    transition: all 2s;
+    
     text-shadow: black 1px 1px;
     color: orangered;
     
@@ -2414,10 +2426,11 @@ body{
     width: 380px;
     position: absolute;
     top: 80px;
-    z-index: 5;
+    z-index: -5;
     left: 100px;
     display: none;
     transition: all 2s;
+    
     
 }
 
